1.file handling in python added on 21-oct-18