@@ -1,3 +1,5 @@
 This is my Experimentals samples
 
-1.File handling in python
+1.File handling 
+2.File extension Checking 
+3.list the directory and checking the object is file or directory
